# runway

./: LICENSE  README.md
connectors/cassandra/: CMakeLists.txt  Dockerfile  README.md  build.bash  cassandra_pumper.json  package.json
connectors/cassandra/include/: CassandraCluster.hpp  CassandraFuture.hpp  CassandraInserter.hpp  CassandraSink.hpp  CassandraUtils.hpp
connectors/cassandra/lib/: CassandraCluster.cc  CassandraInserter.cc  CassandraSink.cc
connectors/cassandra/meta/: source_ansible_bash
connectors/cassandra/meta/playbooks/: devbox_all.yml
connectors/cassandra/meta/playbooks/roles/apachethrift/meta/: main.yml
connectors/cassandra/meta/playbooks/roles/cassandra_client/tasks/: main.yml
connectors/cassandra/meta/playbooks/roles/concord/tasks/: main.yml
connectors/cassandra/src/: main.cc
connectors/kafka/: CMakeLists.txt  Dockerfile  README.md  build.bash
connectors/kafka/examples/: test_kafka.json
connectors/kafka/include/: HighLevelKafkaClient.hpp  HighLevelKafkaConsumer.hpp  HighLevelKafkaProducer.hpp
connectors/kafka/lib/: HighLevelKafkaConsumer.cc  HighLevelKafkaProducer.cc
connectors/kafka/meta/: source_ansible_bash
connectors/kafka/meta/playbooks/: devbox_all.yml
connectors/kafka/meta/playbooks/roles/apachethrift/tasks/: main.yml
connectors/kafka/meta/playbooks/roles/apachethrift/vars/: main.yml
connectors/kafka/meta/playbooks/roles/concord/vars/: main.yml
connectors/kafka/meta/playbooks/roles/folly/tasks/: main.yml
connectors/kafka/meta/playbooks/roles/librdkafka/tasks/: main.yml
connectors/kafka/src/: kafka_sink.cc  kafka_source.cc  main.cc
connectors/kafka_sink/: CMakeLists.txt  Dockerfile  README.md  build.bash
connectors/kafka_sink/include/: HighLevelKafkaProducer.hpp
connectors/kafka_sink/lib/: HighLevelKafkaProducer.cc
connectors/kafka_sink/meta/playbooks/: devbox_all.yml
connectors/kafka_sink/meta/playbooks/group_vars/: all
connectors/kafka_sink/meta/playbooks/roles/compilation_tooling/tasks/: main.yml
connectors/kafka_sink/meta/playbooks/roles/concord/tasks/: main.yml
connectors/kafka_sink/meta/playbooks/roles/lib_uncompress/tasks/: main.yml
connectors/kafka_sink/meta/playbooks/roles/librdkafka/tasks/: main.yml
connectors/kafka_sink/src/: main.cc
connectors/kinesis/: README.md  build.sbt
connectors/kinesis/src/main/java/com/concord/kinesis/: Consumer.java  RecordProcessor.java  RecordProcessorFactory.java
connectors/kinesis/src/main/java/com/concord/kinesis/utils/: Credentials.java  CredentialsProvider.java  Options.java
connectors/kinesis/src/main/resources/: logback.xml
connectors/twitter_source/: build.sbt
connectors/twitter_source/src/main/scala/io/concord/twitter/: ConcordTweeterStream.scala  TweeterStream.scala
meta/: repo_metadata.json
